--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,12 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-helmet": "^6.1.0",
     "react-scroll": "^1.9.0",
     "tailwind-merge": "^1.14.0",
