--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=backend
+
+# ==============================
+# DB Connection (Supabase PostgreSQL)
+# ==============================
+spring.datasource.url=jdbc:postgresql://db.elazwnzvotqktxjbbguh.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=7TtKT8ZJhSrZ7Zkt
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ==============================
+# JPA / Hibernate
+# ==============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Recomendado para Supabase (SSL)
+spring.datasource.hikari.data-source-properties.sslmode=require
+
+jwt.secret=ESTA_CLAVE_ES_SECRETA_Y_LARGA_GENERADA_POR_TI
+jwt.expiration=86400000
